# proxmox_srvbackup

./: .env.example  .gitignore  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  Makefile  README.md  SECURITY.md  pyproject.toml
docs/adr/: 0001-memory-adapters-in-src.md
docs/systemdesign/: module_reference.md
notebooks/: Quickstart.ipynb
src/proxmox_srvbackup/: __init__.py  __init__conf__.py  __main__.py
src/proxmox_srvbackup/adapters/backup/: __init__.py  config_backup.py  orchestrator.py  packages_backup.py  retention.py  setup_keys.py  zfs_backup.py
src/proxmox_srvbackup/adapters/cli/: context.py  main.py  root.py  typed_click.py
src/proxmox_srvbackup/adapters/cli/commands/: __init__.py  backup.py  config.py  info.py  logging.py
src/proxmox_srvbackup/adapters/cli/commands/email/: _common.py
src/proxmox_srvbackup/adapters/config/: defaultconfig.toml  deploy.py  display.py  loader.py  permissions.py
src/proxmox_srvbackup/adapters/config/defaultconfig.d/: 40-layered-config.toml  50-mail.toml  60-backup.toml  90-logging.toml
src/proxmox_srvbackup/adapters/config/systemd/: proxmox-srvbackup-backup.service  proxmox-srvbackup.service  proxmox-srvbackup.timer
src/proxmox_srvbackup/adapters/email/: transport.py  validation.py
src/proxmox_srvbackup/adapters/logging/: setup.py
src/proxmox_srvbackup/adapters/memory/: __init__.py  backup.py  config.py
src/proxmox_srvbackup/adapters/ssh/: __init__.py  commands.py
src/proxmox_srvbackup/application/: ports.py
src/proxmox_srvbackup/composition/: __init__.py
src/proxmox_srvbackup/domain/: __init__.py  behaviors.py  enums.py  errors.py  models.py
tests/: conftest.py  test_backup_adapters.py  test_backup_per_server.py  test_behaviors.py  test_cache_effectiveness.py  test_cli_config.py  test_cli_core.py  test_cli_email.py  test_cli_env_file.py  test_cli_exit_codes.py  test_cli_overrides.py  test_cli_validation.py  test_config_overrides.py  test_deploy_permissions.py  test_display.py  test_enums.py  test_errors.py  test_logging.py  test_mail.py  test_metadata.py  test_metadata_sync.py  test_module_entry.py  test_packages_backup.py  test_ports.py  test_property_email.py  test_property_overrides.py  test_ssh_commands.py  test_summary_report.py
